--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="https://kit.fontawesome.com/f3339f02a7.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="gradient">
-    <h1 class="coolTitle">Shooping Mood Generator</h1>
+    <h1 class="coolTitle">Shopping Mood</h1>
+    <br>
     <button id="random">Random</button>
     <br>
     <input class="color1" type="color" name="color1" value="#fa8072">
     <input class="color2" type="color" name="color2" value="#0d98ba">
+    <br>
     <h2>Mood Color of the Day</h2>
     <h3></h3>
     <div>
         <h1>Shopping List</h1>
-        <p id="first">Get it done today</p>
+        <p id="first">Your favorite wish list</p>
         <input id="userinput" type="text" placeholder="enter items">
         <button id="enter">Enter</button>
         <ul>
